# adventofcode

./: .env  .gitignore  README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  pyproject.toml
inputs/2022/: 20_pierre
scripts/: day1.py  day10.py  day11.py  day12_graph.py  day12_networkx.py  day13.py  day14.py  day14_seanburton.py  day15_portion.py  day15_veryslow.py  day15_z3.py  day16_simple.py  day16_z3.py  day17_simple.py  day18_simple.py  day19_simple.py  day19_z3.py  day2.py  day20_simple.py  day21_simple.py  day21_sympy.py  day22_simple.py  day23_simple.py  day24_simple.py  day25.cob  day25_simple.py  day3.py  day4.py  day5.py  day6.py  day7_simple.py  day8.py  day9.py
src/aoc/: __init__.py  common.py  data.py
tests/: test_graph.py
